Fix QWebpHandler::canRead() to take animation frame count into account

Task-number: QTBUG-61641
Change-Id: I24a139cc75141a588f2ed2558da85cd2f8391af9
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>